<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/bgWhite"
	android:orientation="vertical"
	tools:context=".Activities.MainActivity">
	
	<android.support.v7.widget.Toolbar
		android:id="@+id/toolbar"
		android:layout_width="match_parent"
		android:layout_height="60dp"
		android:background="@color/colorPrimary"
		android:elevation="5dp"
		app:contentInsetEnd="0dp"
		app:contentInsetStart="0dp">
		
		<android.support.constraint.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:paddingStart="5dp"
			android:paddingEnd="5dp">
			
			<TextView
				android:id="@+id/tv_title"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/search_by_category"
				android:textColor="@color/white"
				android:textSize="18dp"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent" />
		</android.support.constraint.ConstraintLayout>
	</android.support.v7.widget.Toolbar>
	
	<android.support.v4.widget.SwipeRefreshLayout
		android:id="@+id/pullToRefresh"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:visibility="gone">
		
		<LinearLayout
			android:id="@+id/ll_connection_error"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:gravity="center"
			android:orientation="vertical">
			
			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:text="@string/pull_to_refresh_msg"
				android:textColor="@color/colorPrimary"
				android:textSize="18dp"
				android:textStyle="bold" />
			
			<ImageView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="50dp"
				android:src="@mipmap/connection_error" />
			
			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:gravity="center"
				android:text="@string/network_error_msg"
				android:textColor="@color/colorPrimary"
				android:textSize="18dp"
				android:textStyle="bold" />
		</LinearLayout>
	</android.support.v4.widget.SwipeRefreshLayout>
	
	<ProgressBar
		android:id="@+id/main_progress_bar"
		style="@android:style/Widget.Holo.ProgressBar.Large"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_gravity="center"
		android:indeterminate="true"
		android:visibility="gone" />
	
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		android:paddingStart="10dp"
		android:paddingTop="20dp"
		android:paddingEnd="10dp"
		android:paddingBottom="10dp">
		
		<TextView
			android:id="@+id/tv_cats"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="start"
			android:text="@string/categories"
			android:textColor="@color/colorPrimary"
			android:textSize="16dp" />
		
		<android.support.v7.widget.RecyclerView
			android:id="@+id/rv_cats"
			android:layout_width="match_parent"
			android:layout_height="wrap_content" />
		
		<ProgressBar
			android:id="@+id/shops_progress_bar"
			style="@android:style/Widget.Holo.ProgressBar.Large"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:indeterminate="true"
			android:visibility="gone" />
		
		<TextView
			android:id="@+id/tv_best_shops"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp"
			android:text="@string/best_shops"
			android:textColor="@color/colorPrimary"
			android:textSize="16dp" />
		
		<android.support.v7.widget.RecyclerView
			android:id="@+id/rv_shops"
			android:layout_width="match_parent"
			android:layout_height="match_parent" />
	</LinearLayout>


</LinearLayout>